[gd_scene load_steps=3 format=3 uid="uid://y65132ek88r5"]

[ext_resource type="Script" path="res://addons/pronto/signal_connecting/connect.gd" id="1_qcj0a"]
[ext_resource type="Texture2D" uid="uid://ciqp75uka3bs5" path="res://addons/pronto/icons/Connect.svg" id="2_cyp0g"]

[node name="connect" type="VBoxContainer"]
offset_right = 16.0
offset_bottom = 16.0
script = ExtResource("1_qcj0a")

[node name="edit" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="connections" type="ItemList" parent="edit"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
allow_reselect = true
auto_height = true

[node name="add" type="TextureRect" parent="edit"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_cyp0g")
stretch_mode = 2

[node name="signals" type="Panel" parent="edit"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(210, 200)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="edit/signals"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="signal_list" type="VBoxContainer" parent="edit/signals/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = -5

[node name="title_text" type="HBoxContainer" parent="edit/signals/ScrollContainer/signal_list"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="edit/signals/ScrollContainer/signal_list/title_text"]
layout_mode = 2
texture = ExtResource("2_cyp0g")
stretch_mode = 3

[node name="Label" type="Label" parent="edit/signals/ScrollContainer/signal_list/title_text"]
layout_mode = 2
text = "Drag or double click"

[node name="HSeparator" type="HSeparator" parent="edit/signals/ScrollContainer/signal_list"]
layout_mode = 2

[connection signal="item_clicked" from="edit/connections" to="." method="_on_connections_item_clicked"]
[connection signal="item_selected" from="edit/connections" to="." method="_on_connections_item_selected"]
[connection signal="mouse_entered" from="edit/add" to="." method="_on_add_mouse_entered"]
